[package]
description = "A terminal-based image viewer."
name = "cleye"
version = "0.1.0"
authors = ["evanandrewrose <evanandrewrose@gmail.com>"]
license = "MIT"

[dependencies]
termion = "1.5.1"
image = "0.15.0"
structopt = "0.1.0"
structopt-derive = "0.1.0"
error-chain = "0.10.0"
log = "0.3.8"
loggerv = "0.2.0"
